--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Set up Go
@@ -27,3 +27,17 @@ jobs:
           args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_GITHUB_TOKEN }}
+      - name: Docs checkout
+        uses: actions/checkout@v3
+        with:
+          repository: algolia/cli-docs
+          path: docs
+          fetch-depth: 0
+          token: ${{secrets.GORELEASER_GITHUB_TOKEN}}
+      - name: Update docs
+        env:
+          GIT_COMMITTER_NAME: algolia-ci
+          GIT_AUTHOR_NAME: algolia-ci
+          GIT_COMMITTER_EMAIL: noreply@algolia.com
+          GIT_AUTHOR_EMAIL: noreply@algolia.com
+        run: make docs-bump
