--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -40,4 +40,5 @@ jobs:
           GIT_AUTHOR_NAME: algolia-ci
           GIT_COMMITTER_EMAIL: noreply@algolia.com
           GIT_AUTHOR_EMAIL: noreply@algolia.com
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_GITHUB_TOKEN }}
         run: make docs-pr
