fix(chore) Add GH_TOKEN env to API Specs update workflow

--- a/.github/workflows/api-specs-pr.yml
+++ b/.github/workflows/api-specs-pr.yml
@@ -11,3 +11,5 @@ jobs:
       - name: Create Pull Request for API Specs
         run: |
           make api-specs-pr
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
