--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -20,6 +20,15 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19
+      - name: Install chocolatey
+        run: |
+          mkdir -p /opt/chocolatey
+          wget -q -O - "https://github.com/chocolatey/choco/releases/download/${CHOCOLATEY_VERSION}/chocolatey.v${CHOCOLATEY_VERSION}.tar.gz" | tar -xz -C "/opt/chocolatey"
+          echo '#!/bin/bash' >> /usr/local/bin/choco
+          echo 'mono /opt/chocolatey/choco.exe $@' >> /usr/local/bin/choco
+          chmod +x /usr/local/bin/choco
+        env:
+          CHOCOLATEY_VERSION: 1.2.0
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2.8.0
         with:
@@ -27,6 +36,7 @@ jobs:
           args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_GITHUB_TOKEN }}
+          CHOCOLATEY_API_KEY: ${{ secrets.CHOCOLATEY_API_KEY }}
       - name: Docs checkout
         uses: actions/checkout@v3
         with:
