--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2.8.0
         with:
-          version: v0.184.0
+          version: "~1.13.1"
           args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_GITHUB_TOKEN }}
