feat(e2e): test for version
Setup the end-to-end test machinery and add a simple test for the version command

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,14 +18,23 @@ tasks:
     desc: Run unit tests
     run: always
     cmd: go test ./...
+  e2e:
+    desc: Run end-to-end tests
+    summary: |
+      Run tests that mimic how user enters commands and flags.
+      These tests make real requests to the Algolia API.
+      To run them, create a `.env` file with the `ALGOLIA_APPLICATION_ID`
+      and `ALGOLIA_API_KEY` credentials.
+    cmd: go test ./e2e -tags=e2e
+    dotenv: [.env]
   lint:
     desc: Lint code
     cmd: golangci-lint run
   format:
     desc: Format code
     cmds:
-      - gofumpt -w pkg cmd test internal api
-      - golines -w pkg cmd test internal api
+      - gofumpt -w pkg cmd test internal api e2e
+      - golines -w pkg cmd test internal api e2e
   ci:
     desc: Test, lint, and format
     aliases:
