--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: 1.23
+      - name: Install mono
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y mono-complete
       - name: Install chocolatey
         run: |
           mkdir -p /opt/chocolatey
